--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Day03.cs" />
     <Compile Include="Day04.cs" />
     <Compile Include="Day05.cs" />
+    <Compile Include="Day08.cs" />
     <Compile Include="Day07.cs" />
     <Compile Include="Day06.cs" />
     <Compile Include="Program.cs" />
