--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Day04.cs" />
     <Compile Include="Day05.cs" />
     <Compile Include="Day14.cs" />
+    <Compile Include="Day15.cs" />
     <Compile Include="DayX.cs" />
     <Compile Include="Day13.cs" />
     <Compile Include="Day12.cs" />
