--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Day17.cs" />
     <Compile Include="Day18.cs" />
     <Compile Include="Day19.cs" />
+    <Compile Include="Day20.cs" />
     <Compile Include="DayX.cs" />
     <Compile Include="Day13.cs" />
     <Compile Include="Day12.cs" />
